sdk/v0.3/deepseek.mdx
---
title: "pixeltable.functions.deepseek"
sidebarTitle: "deepseek"
icon: "square-m"
---
<a href="https://github.com/pixeltable/pixeltable/blob/v0.3/pixeltable/functions/deepseek.py#L0" target="_blank">View source on GitHub</a>

## UDFs


---

### `chat_completions()` <sub>udf</sub>

Creates a model response for the given chat conversation.


Equivalent to the Deepseek `chat/completions` API endpoint. For additional details, see: [https://api-docs.deepseek.com/api/create-chat-completion](https://api-docs.deepseek.com/api/create-chat-completion)

Deepseek uses the OpenAI SDK, so you will need to install the `openai` package to use this UDF.

**Requirements:**

- `pip install openai`


**Signature:**

```python
chat_completions(
    messages: Json,
    model: String,
    frequency_penalty: Optional[Float],
    logprobs: Optional[Bool],
    top_logprobs: Optional[Int],
    max_tokens: Optional[Int],
    presence_penalty: Optional[Float],
    response_format: Optional[Json],
    stop: Optional[Json],
    temperature: Optional[Float],
    tools: Optional[Json],
    tool_choice: Optional[Json],
    top_p: Optional[Float]
)-> Json
```

**Parameters:**

- **`messages`** (*Json*): A list of messages to use for chat completion, as described in the Deepseek API documentation.
- **`model`** (*String*): The model to use for chat completion.

**Returns:**

- *Json*: A dictionary containing the response and other metadata.



**Example:**

Add a computed column that applies the model `deepseek-chat` to an existing Pixeltable column `tbl.prompt` of the table `tbl`:
```python
messages = [
```

